--- a/src/app/shared/activity/activity.component.html
+++ b/src/app/shared/activity/activity.component.html
@@ -5,6 +5,44 @@
         <h3>notification</h3>
     </div>
 
+    <div class="members-div">
+        <div class="background-circle profile-box">
+            <h5>B</h5>
+        </div>
+        <div class="background-circle plus">
+            <h5>+</h5>
+        </div>
+        <div class="date-picker">
+           
+        </div>
+    </div>
+
+    <div class="inner-header">
+        <i class="fas fa-stream"></i>
+        <h5>Description</h5>
+    </div>
+
+    <div class="description-input">
+    <input type="text" placeholder="Add a more detailed description…">
+</div>
+
+<div class="check-list">
+    <div class="inner-header">
+        <i class="far fa-check-square"></i> 
+        <h5>popup-box</h5>
+    </div>
+    <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
+    <mat-checkbox>icon work done</mat-checkbox>
+  
+</div>
+
+<!-- <div class="activity">
+<div class="inner-header">
+    <i class="fas fa-chart-line"></i>
+    <h5>Description</h5>
+</div>
+</div> -->
+
     <!-- check list add popup box  Start-->
      <div class="check-list-popup" *ngIf="checkListSection">
         <div class="no-back">
