--- a/src/app/layout/master/master.component.scss
+++ b/src/app/layout/master/master.component.scss
@@ -1,24 +1,5 @@
 .main-div {
     width: 100%;
-    .fix-sidebar {
-      padding: 0px 5px;
-      float: left;
-      width: 4%;
-      color: white;
-      background-color: #292F4C;
-      height: 100vh;
-      text-align: center;
-      .icon-image-notification {
-        margin-bottom: 10px;
-        img {
-          height: 38px;
-          cursor: pointer;
-          &:focus {
-            outline: none;
-        }
-        }
-      }
-    }
     .icon-image {
       line-height: 2;
       img {
@@ -56,114 +37,167 @@
         height: 50px;
       }
 
-      // span {
-      //   margin: 8px 0px;
-      //   font-size: 19px;
-      //   font-weight: 600;
-      // }
+
     }
   }
   .content {
-    // float: left;
-    // width: 95%;
-    // height: 100vh;
+  
     mat-drawer-container {
-      height: 100vh;
-      background-color: white;
-      // border-right: 1px solid gray;
+      position: relative;
+      background-color: #F0F2F7;
       i {
         line-height: 0;
         font-size: 12px;
       }
-      button {
-        background-color: white;
-        border: 1px solid #e1e1e1;
-        border-left: none;
+      .button-sidebar {
+        background-color: #1565C0;
+        border-radius: 50%;
+        height: 50px;
+        width: 50px;
+        border: none;
         padding: 4px 8px 4px 6px;
-        position: relative;
+        position: absolute;
         top: 9px;
-        border-radius: 0 20px 20px 0;
+        left: 20px;
         z-index: 999;
         cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 3px 5px -1px rgba(0,0,0,.2),
+                    0 6px 10px 0 rgba(0,0,0,.14),
+                    0 1px 18px 0 rgba(0,0,0,.12);
         &:focus {
           outline: -webkit-focus-ring-color none;
         }
-        &:hover {
-          background-color: #009aff;
           i {
-            color: white;
-            &:hover {
-              -webkit-box-shadow: -1px 2px 11px -2px rgba(250, 247, 250, 1);
-              -moz-box-shadow: -1px 2px 11px -2px rgba(250, 247, 250, 1);
-              box-shadow: -1px 2px 11px -2px rgba(250, 247, 250, 1);
-            }
+            color: white!important;
+            font-size: 24px;
+            margin-left: 0px!important;
+        }
+      }
+      .nav {
+        padding: 0px 20px 0px 0px;
+        height: 50px;
+        background-color: #F0F2F7;
+        overflow: hidden;
+        position: fixed;
+       top: 0;
+        width: 100%;
+        .icons-div {
+          display: inline-flex;
+          float: right;
+          padding-right: 20px
+        }
+        i {
+          color: #5A5A5A;
+          font-size: 24px;
+        }
+        span {
+          padding: 19px 10px 0px 10px;
+          margin: 5px;
+          &:hover {
+            background-color:#E7E9ED;
           }
         }
+        .example-form {
+          margin-right: 10px;
+        }
+      }
+      .main-content {
+        padding: 70px 20px 20px 20px;
       }
     }
     mat-drawer {
-      min-width: 260px;
+      min-width: 250px;
       position: absolute;
-      a {
-        color: #292f4c;
+      background-color: #70AADE;
+     .profile-div {
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       margin-top: 30px;
+       height: 70px;
+       width: 100%;
+       background-color: #91B6D6;
+     }
+     .img-circle {
+      height: 56px;
+       img {
+        border-radius: 50%;
+        height: 56px;
+       }
+     }
+     .usser-name {
+       margin-left: 13px;
+       color: white;
+       font-weight: 500;
+       h4 {
+         margin: 0px;
+         font-size: 16px;
+       }
+       span {
+         font-size: 13px;
+         color: #DEEDFB;
+       }
+     }
+    //  .logout {
+    //    color: #716F6F;
+    //    margin: 0px 0px 0px 15px;
+    //    i {
+    //      font-size: 32px;
+    //    }
+    //  }
+    .sidebar-menu {
+      color: #1E3262;
+      margin-top: 60px;
+      h4 {
+        margin-left: 15px;
+        margin-bottom: 0px;
+      }
+      ul {
+        list-style-type: none;
+        padding-inline-start: 0px;
+      }
+      li{
+        font-size: 16px;
+        padding: 10px 25px;
+        align-items: center;
+        display: flex;
+        i {
+          font-size: 20px;
+          color: #1E3262;
+          margin-right: 5px;
+        }
+        &:hover{
+          background-color: #6699CC;
+        }
+       a {
         text-decoration: none;
-        font-size: 18px;
-        font-weight: 500;
-        &:hover {
-          text-decoration: none;
-          font-size: 18px;
-          font-weight: 500;
-          &:hover{
-            text-decoration: none;
-          }
-      }
-      }
-      .header-box {
-        padding: 20px 22px 15px 22px;
-        a {
-          float: left;
-          font-size: 22px;
-        }
-        i {
-          float: right;
-          color: #009AFF;
-          font-size: 25px;
-        }
-      }
-      .search {
-        position: relative;
-        text-align: center;
-        input {
-          border: none;
-          padding: 10px 10px 10px 25px;
-          font-size: 17px;
-          color: #9699a6!important;
-          outline: 0;
-          width: 80%;
-          &:focus {
-            border-bottom: 1px solid #009AFF;
-            i {
-              color: #009AFF!important;
-            }
-          }
-        }
-        i {
-          position: absolute;
-          color: #9699a6!important;
-          left: 20px;
-          top: 11px;
-        }
-      }
-      .links {
-        padding-left: 22px;
+        color: white;
+        width: 100%;
       }
     }
-    .header-box {
-      padding: 20px 22px 15px 22px;
     }
-    .links {
-      padding-left: 22px;
+    .add-btn {
+      display: flex;
+      align-items: center;
+      padding: 10px 25px;
+      cursor: pointer;
+      &:hover{
+        background-color: #6699CC;
+      }
+      span {
+        color: white;
+      }
+      i {
+        color: white;
+        font-size: 20px;
+        margin-right: 5px;
+      }
     }
+    }
+   
   }
 
 
