--- a/src/app/shared/activity/activity.component.scss
+++ b/src/app/shared/activity/activity.component.scss
@@ -1,8 +1,8 @@
 .avtivity-main-div {
-    background-color: #F4F5F7;
+    background-color: #f4f5f7;
     .main-content {
         float: left;
-        width: 85%;
+        width: 78%;
         .header {
             color: #42526e;
             display: flex;
@@ -17,7 +17,7 @@
     }
     .sidenav {
         float: right;
-        width: 25%;
+        width: 22%;
         p {
             color: #5e6c84;
     font-size: 12px;
@@ -173,3 +173,69 @@ input[type="file"] {
             display: none; 
         }
     }
+
+.background-circle {
+    background-color: #C1C7D0;
+    color: #24334c;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    cursor: pointer;
+    margin-left: 24px;
+}
+.members-div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 21px;
+}
+.plus {
+    margin-left: 8px;
+}
+.inner-header{
+    display: flex;
+    align-items: center;
+    color: #42526e;
+    h5 {
+        margin-left: 8px;
+        font-size: 16px;
+        margin-block-start: 0.50em;
+    margin-block-end: 0.50em;
+    }
+}
+.description-input {
+    margin-bottom: 15px;
+    input {
+        background-color: rgba(9,30,66,.04);
+        height: 56px;
+        border-radius: 4px;
+        padding-top: 0px;
+        border: none;
+        &:focus {
+            outline-offset: none;
+        }
+        &:active {
+            height: 100px;
+        }
+    }
+}
+.check-list {
+    .inner-header{
+        i {
+            font-size: 19px;
+        }
+    }
+    .check-list-point {
+        display: flex;
+        align-items: center;
+        color: #42526e;
+        h5 {
+            margin-left: 8px;
+            font-size: 15px;
+            margin-block-start: 0.50em;
+           margin-block-end: 0.50em;
+        }
+    }
+}
