--- a/src/app/layout/master/master.component.scss
+++ b/src/app/layout/master/master.component.scss
@@ -76,17 +76,19 @@
             margin-left: 0px!important;
         }
       }
-      .nav {
-        padding: 0px 20px 0px 0px;
-        height: 50px;
+      nav { 
         background-color: #F0F2F7;
-        overflow: hidden;
-        position: fixed;
-       top: 0;
-        width: 100%;
+      //   padding: 0px 20px 0px 0px;
+      //   height: 50px;
+      //   background-color: #F0F2F7;
+      //   overflow: hidden;
+      //   position: fixed;
+      //  top: 0;
+      //   width: 100%;
+      //   text-align: right;
         .icons-div {
+          text-align: right;
           display: inline-flex;
-          float: right;
           padding-right: 20px
         }
         i {
@@ -94,10 +96,26 @@
           font-size: 24px;
         }
         span {
+          position: relative;
           padding: 19px 10px 0px 10px;
           margin: 5px;
           &:hover {
             background-color:#E7E9ED;
+          }
+          .notification-circle {
+            width: 18px;
+            height: 18px;
+            border-radius: 50%;
+            background-color: red;
+            color: white;
+            position: absolute;
+            top: 3px;
+            right: 3px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            font-weight: 500;
           }
         }
         .example-form {
@@ -152,8 +170,9 @@
       color: #1E3262;
       margin-top: 60px;
       h4 {
-        margin-left: 15px;
-        margin-bottom: 0px;
+        margin-left: 26px;
+        margin-bottom: 10px;
+        font-size: 18px;
       }
       ul {
         list-style-type: none;
@@ -166,8 +185,8 @@
         display: flex;
         i {
           font-size: 20px;
-          color: #1E3262;
-          margin-right: 5px;
+          color: #263262;
+          margin-right: 12px;
         }
         &:hover{
           background-color: #6699CC;
@@ -274,3 +293,4 @@
     line-height: 2.5;
   }
 }
+
