--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,10 @@ body{
 }
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+
+
 
 .orange {
   background-color: #FDAB3D;
@@ -72,37 +76,11 @@ td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
 ng-sidebar-container {
   height: calc(100vh - 25px) !important;
 }
-<<<<<<< HEAD
-// login page css start from here
-
-.login{
-  .mat-checkbox-frame {
-    border-color: white!important;
-  }
-  .mat-form-field-appearance-legacy .mat-form-field-label {
-    color: white!important;
-    }
-    .mat-form-field-appearance-legacy .mat-form-field-underline {
-      background-color: white!important;
-      height: 2px!important;
-    }
-    .mat-form-field-ripple{
-      background-color: white!important;
-    }
-  }
-  .nav {
-    .mat-form-field-appearance-legacy .mat-form-field-infix {
-      padding: .3375em 0;
-  }
-  .mat-form-field-appearance-legacy .mat-form-field-infix {
-    font-size: .875rem;
-}
-.mat-form-field-infix {
-  border-top: .84375em solid transparent;
-}
-  }
-=======
 .mat-header-cell {
   font-size: 17px;
 }
->>>>>>> bae6855aa1b42816ea0661527b07d246922bfefc
+
+
+.mat-drawer-container {
+  color: #1E3262;
+}
