--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -1,67 +1,47 @@
-.notification-main-div {
-    padding: 0px 40px;
-
-    table {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        width: 100%;
-      }
-      
-      td, th {
-          border: none;
-        border-bottom: 1px solid #dddddd;
-        text-align: left;
-        padding: 15px 8px;
-      }
-      .dot {
-        height: 35px;
-        width: 35px;
-        display: flex;
-        font-size: 13px;
-        vertical-align: middle;
-        border-radius: 50%;
-        background: #673ab7;
-        margin-right: 5px;
-        justify-content: center;
-        align-items: center;
-        color: white;
-    }
-    .name {
-        display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-    .time {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .clock {
-        font-size: 19px;
-        margin-right: 2px;
-    }
-    .update {
-        display: flex;
-        align-items: center;  
-        justify-content: center;
-    }
-    .status {
-        display: flex;
-        justify-content: center;
-        align-items: center;  
-        margin-left: 7px;
-        button {
-            color: white;
-            font-weight: 400;
-            border-radius: 2px;
-            border: none;
-            font-size: 14px;
-            padding: 8px 25px;
-        }
-        .fas {
-            margin: 0px 5px;
-            font-size: 17px;
-            color: #c5bfbf;
-        }
-    }
-}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  .bg{
+    background: #96DF73;
+    border-radius: 5px
+  }
+  .bg1{
+    background: #EF403D;
+    border-radius: 5px
+  }
+  .bg3{
+    background: #FFD557;
+    border-radius: 5px
+  }
+  .bg4{
+    background: #ACDAE2;
+    border-radius: 5px
+  }
+  .clear{
+      float: left;
+  }
+  .notify-border{
+      border: 1px;
+      height: 50px;
+      padding: 0px 20px 0px 20px;
+  }
+  .check-icon{
+      color: white;
+  }
+  .nb{
+      margin-top: 20px;
+      height: 50px;
+      padding: 0px 20px 0px 20px;
+  }
+  .nb1{
+      margin-top: 20px;
+    padding: 0px 20px 0px 20px;
+      height: 50px;
+  }
+  .nb2{
+     padding: 0px 20px 0px 20px;
+      margin-top: 20px;
+      height: 50px;
+  }
