--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,15 +70,18 @@ td.content {
 // td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type {
 //   padding-left: 85px !important;
 // }
-td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
-  text-align: center;
-}
+// td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
+//   text-align: center;
+// }
 ng-sidebar-container {
   height: calc(100vh - 25px) !important;
 }
 .mat-header-cell {
   font-size: 17px;
 }
+// td.mat-cell:first-of-type{
+//   padding-left: 57px;
+// }
 
 
 .mat-drawer-container {
